--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Get Your Free Annuity Quote</h1>
+        <h1>Get a Free Quote</h1>
         
         <form id="annuity-form" class="annuity-form">
             <div class="form-row full-width">
